🐛 fix scrollbar

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,17 +6,12 @@ footer#colophon {
   margin-top: $spacing * 10;
 
   @include tablet {
-    width: calc(100% - 3rem);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     max-height: 50rem;
     margin-top: $spacing * 8;
-  }
-
-  @include desktop {
-    width: calc(100% - #{$width-large-desktop-main-nav});
   }
 
   address {
